--- a/src/components/DailyCaloriesForm/DailyCaloriesForm.css
+++ b/src/components/DailyCaloriesForm/DailyCaloriesForm.css
@@ -1,4 +1,4 @@
-.daily-calories-form {
+/* .daily-calories-form {
   background: #fff;
   border: 1px solid #E0E0E0;
   border-radius: 8px;
@@ -7,7 +7,7 @@
   margin: 0 auto;
 }
 
-/* Başlık */
+Başlık
 .daily-calories-form h2 {
   font-size: 20px;
   font-weight: 700;
@@ -15,7 +15,7 @@
   text-align: center;
 }
 
-/* Form */
+Form
 .daily-calories-form form {
   display: flex;
   flex-direction: column;
@@ -40,7 +40,7 @@
   font-size: 12px;
 }
 
-/* Buton */
+Buton
 .primary-btn {
   width: 210px;
   height: 43px;
@@ -68,7 +68,7 @@
   cursor: pointer;
 }
 
-/* Modal */
+Modal
 .modal {
   position: fixed;
   inset: 0;
@@ -85,7 +85,7 @@
   width: 400px;
 }
 
-/* Responsive */
+Responsive
 @media (max-width: 480px) {
   .daily-calories-form {
     width: 240px;
@@ -110,4 +110,4 @@
     height: 343px;
     margin-top: 293px;
   }
-}
+} */
