--- a/src/components/DiaryProductsList/DiaryProductsList.css
+++ b/src/components/DiaryProductsList/DiaryProductsList.css
@@ -1,8 +1,28 @@
 .diary-products-list {
-  margin-top: 20px;
-  max-height: 500px;
+  margin-top: 0;
+  max-height: 270px;
   overflow-y: auto;
-  padding-right: 10px;
+  overflow-x: hidden;
+  padding-right: 0;
+}
+
+/* Custom scrollbar styling */
+.diary-products-list::-webkit-scrollbar {
+  width: 6px;
+}
+
+.diary-products-list::-webkit-scrollbar-track {
+  background: #F0F1F3;
+  border-radius: 3px;
+}
+
+.diary-products-list::-webkit-scrollbar-thumb {
+  background: #9B9FAA;
+  border-radius: 3px;
+}
+
+.diary-products-list::-webkit-scrollbar-thumb:hover {
+  background: #FC842D;
 }
 
 .diary-products-empty {
