--- a/src/components/DiaryDateCalendar/DiaryDateCalendar.css
+++ b/src/components/DiaryDateCalendar/DiaryDateCalendar.css
@@ -1,5 +1,13 @@
 .diary-date-calendar {
   position: relative;
+  margin-bottom: 60px;
+}
+
+/* Desktop: 1280px and above - 148px top margin */
+@media screen and (min-width: 1280px) {
+  .diary-date-calendar {
+    margin-top: 148px;
+  }
 }
 
 .diary-date-display {
@@ -8,9 +16,21 @@
   gap: 10px;
   font-family: 'Verdana', sans-serif;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 34px;
+  line-height: 100%;
   color: #212121;
-  margin-bottom: 20px;
+}
+
+.diary-date-display span {
+  width: 219px;
+  flex: 0 0 auto;
+}
+
+.diary-calendar-icon {
+  flex-shrink: 0;
+  display: block;
+  visibility: visible;
+  opacity: 1;
 }
 
 .diary-calendar-icon {
@@ -36,9 +56,22 @@
   padding: 10px;
 }
 
-@media screen and (max-width: 767px) {
+/* Phone: 320px - 767px */
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .diary-date-display {
     font-size: 16px;
+    width: auto;
+  }
+  
+  .diary-date-calendar {
+    margin-bottom: 20px;
+  }
+}
+
+/* Tablet: 768px - 1279px */
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .diary-date-display {
+    font-size: 28px;
   }
 }
 
