--- a/src/components/RightSideBar/RightSideBar.module.css
+++ b/src/components/RightSideBar/RightSideBar.module.css
@@ -1,7 +1,8 @@
 .container {
   background-color: #F0F1F3;
-  height: 100%;
+  min-height: 100%;
   padding: 40px 20px;
+  box-sizing: border-box;
 }
 
 .summarySection {
@@ -57,8 +58,15 @@
   font-style: italic;
 }
 
+/* Mobile */
+@media screen and (max-width: 767px) {
+  .container {
+    padding: 20px;
+  }
+}
+
 /* --- TABLET VIEW (Leaves Coming) --- */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .container {
     display: flex;
     flex-direction: row;
@@ -98,7 +106,6 @@
     
     height: 100vh;
     width: 100%;
-    max-width: 520px;
   }
   
   .summarySection {
