--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -4,46 +4,29 @@
   flex-direction: column;
   position: relative;
   overflow: hidden;
-  background-color: #fff;
+  background-color: transparent;
 }
 
 .container {
-  padding: 0 20px;
+  padding: 20px;
   margin: 0 auto;
   width: 100%;
-  max-width: 1280px;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  flex: 1;
 }
 
-/* Background Decorations (Slim Mom Style) */
-@media screen and (min-width: 768px) {
-  .pageWrapper::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../../assets/images/auth-bg-tablet.png');
-    background-repeat: no-repeat;
-    background-position: bottom right;
-    z-index: 0;
-    pointer-events: none;
-  }
-  
+/* Tablet: 768px - 1279px */
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .container {
-    padding: 0 32px;
+    padding: 32px;
   }
 }
 
+/* Desktop: 1280px and above */
 @media screen and (min-width: 1280px) {
-  .pageWrapper::after {
-    background-image: url('../../assets/images/auth-bg-desktop.png');
-    background-position: right top;
-  }
-  
   .container {
-    padding: 0 16px;
-    padding-top: 160px;
+    padding: 32px;
   }
 }
