--- a/src/pages/CalculatorPage/CalculatorPage.module.css
+++ b/src/pages/CalculatorPage/CalculatorPage.module.css
@@ -302,7 +302,7 @@
   
   .calculatorSection {
     width: 60%;
-    padding: 100px 126px 43px 32px;
+    padding: 0 126px 43px 32px;
   }
   
   .sidebarSection {
